--- a/index.html
+++ b/index.html
@@ -3,40 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <title>Вход через Telegram</title>
-  <script async src="https://telegram.org/js/telegram-widget.js?7"
-          data-telegram-login="P2PBTBot"
-          data-size="large"
-          data-userpic="false"
-          data-request-access="write"
-          data-on-auth="onTelegramAuth">
-  </script>
 </head>
 <body>
   <h2>Вход в закрытую систему</h2>
-  <div id="login-status"></div>
+
+  <!-- Telegram Login Widget -->
+  <script async src="https://telegram.org/js/telegram-widget.js?22"
+          data-telegram-login="P2Pbot"
+          data-size="large"
+          data-userpic="false"
+          data-request-access="write"
+          data-onauth="onTelegramAuth">
+  </script>
+
+  <div id="status"></div>
 
   <script>
     async function onTelegramAuth(user) {
-      document.getElementById('login-status').innerHTML = `
-        Добро пожаловать, ${user.first_name}!<br>
-        Ваш Telegram: @${user.username}<br>
-        Telegram ID: ${user.id}<br>
-        Проверка доступа...`
+      document.getElementById('status').innerHTML = `Здравствуйте, ${user.first_name} (@${user.username})<br>Проверка доступа...`;
 
-      // Отправляем данные на Supabase (через webhook или API)
-      const res = await fetch('https://your-backend.com/api/check-user', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
+      const response = await fetch("https://ВАШ-БЭКЕНД/api/check-user", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
           telegram_id: user.id,
           username: user.username
         })
       });
 
-      if (res.ok) {
-        window.location.href = '/dashboard';
+      if (response.ok) {
+        // Допущен — переход внутрь
+        window.location.href = "/dashboard";
       } else {
-        document.getElementById('login-status').innerHTML += '<br>Ожидайте подтверждение от администратора.';
+        document.getElementById('status').innerHTML += "<br><b>Ожидайте подтверждение администратора.</b>";
       }
     }
   </script>
