--- a/index.html
+++ b/index.html
@@ -1,41 +1,62 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Вход через Telegram</title>
+  <meta charset="UTF-8" />
+  <title>Вход в закрытую систему</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding-top: 100px;
+      background-color: #f2f2f2;
+    }
+    h2 {
+      font-size: 28px;
+      margin-bottom: 40px;
+    }
+    #status {
+      margin-top: 20px;
+      font-size: 18px;
+    }
+  </style>
 </head>
 <body>
   <h2>Вход в закрытую систему</h2>
 
   <!-- Telegram Login Widget -->
   <script async src="https://telegram.org/js/telegram-widget.js?22"
-          data-telegram-login="P2Pbot"
-          data-size="large"
-          data-userpic="false"
-          data-request-access="write"
-          data-onauth="onTelegramAuth">
+    data-telegram-login="P2Pbot"
+    data-size="large"
+    data-userpic="false"
+    data-request-access="write"
+    data-onauth="onTelegramAuth">
   </script>
 
   <div id="status"></div>
 
   <script>
     async function onTelegramAuth(user) {
-      document.getElementById('status').innerHTML = `Здравствуйте, ${user.first_name} (@${user.username})<br>Проверка доступа...`;
+      document.getElementById('status').innerHTML = `Здравствуйте, ${user.first_name} (@${user.username || 'без username'})<br>Проверка доступа...`;
 
-      const response = await fetch("https://ВАШ-БЭКЕНД/api/check-user", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          telegram_id: user.id,
-          username: user.username
-        })
-      });
+      try {
+        const response = await fetch("https://7d25bb63-3cc0-438f-929d-e61a05bf2870-00-1k94rn18cxlvn.picard.replit.dev/api/check-user", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            telegram_id: user.id,
+            username: user.username
+          })
+        });
 
-      if (response.ok) {
-        // Допущен — переход внутрь
-        window.location.href = "/dashboard";
-      } else {
-        document.getElementById('status').innerHTML += "<br><b>Ожидайте подтверждение администратора.</b>";
+        if (response.ok) {
+          // ✅ Доступ разрешён
+          window.location.href = "/dashboard"; // сюда ты потом сделаешь личный кабинет
+        } else {
+          // ❌ Нет доступа
+          document.getElementById('status').innerHTML += "<br><b>Ожидайте подтверждение администратора.</b>";
+        }
+      } catch (err) {
+        document.getElementById('status').innerHTML += "<br><b>Ошибка подключения к серверу</b>";
       }
     }
   </script>
